src/styles/global.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

html {
  scroll-behavior: smooth;
  background-color: var(--color-slate-50);
}

.dark html {
  background-color: var(--color-slate-950);
}

@font-face {
  font-family: "Google Sans";
  src: url("/fonts/GoogleSans-Regular.woff2") format("woff2");
  font-style: normal;
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: "Google Sans";
  src: url("/fonts/GoogleSansText-Bold.woff2") format("woff2");
  font-style: normal;
  font-weight: 700;
  font-display: swap;
}

@theme {
  --color-glass-white: rgba(255, 255, 255, 0.2);
  --color-glass-black: rgba(0, 0, 0, 0.2);
  --color-glass-border: rgba(255, 255, 255, 0.1);
  --google-blue: #4285f4;
  --google-red: #db4437;
  --google-yellow: #f4b400;
  --google-green: #0f9d58;
  --font-sans: "Google Sans", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

@layer base {

  html,
  body {
    font-family: var(--font-sans);
  }
}

@layer base {
  ::-webkit-scrollbar {
    width: 12px;
    height: 12px;
  }

  ::-webkit-scrollbar-track {
    background: transparent;
    margin: 4px;
  }

  .dark ::-webkit-scrollbar-track {
    background: var(--color-slate-950);
    margin: 4px;
  }

  ::-webkit-scrollbar-thumb {
    background: linear-gradient(var(--google-blue), var(--google-red), var(--google-yellow), var(--google-green));
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);
    border-radius: 100px;
    border: 3px solid transparent;
    background-clip: padding-box;
    box-shadow: inset 0 0 0 1px var(--color-glass-border);
  }

  .dark ::-webkit-scrollbar-thumb {
    background: linear-gradient(var(--google-blue), var(--google-red), var(--google-yellow), var(--google-green));
    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);
    border-radius: 100px;
    border: 3px solid transparent;
    background-clip: padding-box;

  }

  ::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0, 0, 0, 0.4);
  }

  .dark ::-webkit-scrollbar-thumb:hover {
    background-color: rgba(255, 255, 255, 0.4);
  }

  ::-webkit-scrollbar-corner {
    background: transparent;
  }

  .dark ::-webkit-scrollbar-corner {
    background: var(--color-slate-950);
  }

  ::-webkit-scrollbar-button {
    background: transparent;
  }

  .dark ::-webkit-scrollbar-button {
    background: var(--color-slate-950);
  }
}

